--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -1,11 +1,6 @@
-<html>
-<head>
-    <title>Messages</title>
-    <%- include('./partials/head'); %>
-</head>
-<body>
+<%- include('./partials/header'); %>
 <header>
-    <%- include('./partials/header'); %>
+    <%- include('./partials/topnav'); %>
 </header>
 <div class="grid-container">
     <div class="cell large-12">
@@ -26,8 +21,4 @@
         <a href="/send" class="button">Send Message</a>
     </div>
 </div>
-<footer>
-    <%- include('./partials/footer'); %>
-</footer>
-</body>
-</html>
+<%- include('./partials/footer'); %>
