--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,10 @@
-<div class="grid-container">
-    <div class="cell large-12">
-        <h4>Phil Stene</h4>
+<footer>
+    <div class="grid-container">
+        <div class="cell large-12">
+            <h4>Phil Stene</h4>
+        </div>
     </div>
-</div>
+</footer>
+<%- include('./includes'); %>
+</body>
+</html>
