--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,10 @@
-<div class="grid-container">
-    <div class="cell large-12">
-        <h1>Merkle Software Engineering Assignment</h1>
-    </div>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+    <title>Send Message</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
