--- a/views/send.ejs
+++ b/views/send.ejs
@@ -1,11 +1,6 @@
-<html>
-<head>
-    <title>Send Message</title>
-    <%- include('./partials/head'); %>
-</head>
-<body>
+<%- include('./partials/header'); %>
 <header>
-    <%- include('./partials/header'); %>
+    <%- include('./partials/topnav'); %>
 </header>
 <div class="grid-container">
     <div class="cell large-12">
@@ -30,8 +25,4 @@
         </form>
     </div>
 </div>
-<footer>
-    <%- include('./partials/footer'); %>
-</footer>
-</body>
-</html>
+<%- include('./partials/footer'); %>
