--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,1 +1,4 @@
 <script type="application/javascript" src="/js/main.min.js"></script>
+<script type="application/javascript">
+    $(document).foundation();
+</script>
