--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -1,20 +1,22 @@
-<div class="top-bar">
-    <div class="top-bar-left">
-        <ul class="menu">
-            <li class="menu-text">Messenger</li>
-            <% if(page == 'messages') { %>
-                <li class="is-active"><a href="#">Messages</a></li>
-            <% } else { %>
-                <li class=""><a href="./messages">Messages</a></li>
-            <% } %>
-            <% if(page == 'send') { %>
-                <li class="is-active"><a href="#">Send Message</a></li>
-            <% } else { %>
-                <li class=""><a href="./send">Send Message</a></li>
-            <% } %>
-        </ul>
-    </div>
-    <div class="top-bar-right">
+<div class="grid-container">
+    <div class="top-bar">
+        <div class="top-bar-left">
+            <ul class="menu">
+                <li class="menu-text">Messenger</li>
+                <% if(page == 'messages') { %>
+                    <li class="is-active"><a href="#">Messages</a></li>
+                <% } else { %>
+                    <li class=""><a href="./messages">Messages</a></li>
+                <% } %>
+                <% if(page == 'send') { %>
+                    <li class="is-active"><a href="#">Send Message</a></li>
+                <% } else { %>
+                    <li class=""><a href="./send">Send Message</a></li>
+                <% } %>
+            </ul>
+        </div>
+        <div class="top-bar-right">
 
+        </div>
     </div>
 </div>
