--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 <div class="grid-container">
     <form data-abide method="post" action="">
         <div class="grid-container">
-            <div class="gid-x grid-margin-x">
+            <div class="grid-x grid-margin-x">
                 <div class="cell medium-6">
                     <label>Login
                         <input id="login" name="login" type="text" required/>
@@ -18,6 +18,11 @@
                 </div>
                 <div class="cell medium-6">
                     <button type="submit" id="submit-btn" value="Submit" class="button">Login</button>
+                </div>
+                <div class="cell medium-6">
+                    <% if(locals.name) { %>
+                        <p><%- name %> has been successfully registered!</p>
+                    <% } %>
                 </div>
             </div>
         </div>
