--- a/views/partials/includes.ejs
+++ b/views/partials/includes.ejs
@@ -1,4 +1,5 @@
 <script type="application/javascript" src="/js/main.min.js"></script>
 <script type="application/javascript">
+    Foundation.Abide.defaults.patterns['full-name'] = /^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$/;
     $(document).foundation();
 </script>
