--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="top-bar-right">
-
+            <button type="button" class="button logout">Logout</button>
         </div>
     </div>
 </div>
