--- a/views/send.ejs
+++ b/views/send.ejs
@@ -12,9 +12,7 @@
                         <label>Recipient
                             <select name="recipient" id="recipient" required>
                                 <option value="">Select recipient</option>
-
-                                <option value="Joe">Joe</option>
-                                <option value="Mike">Mike</option>
+                                <%- data %>
                             </select>
                         </label>
                     </div>
