Revert "added third party authentication"
This reverts commit 8a2cea7102e12ec9fd1aea157d658ee4b17ef034.

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="top-bar-right">
-            <a href="/logout" class="button logout">Logout</a>
+            <button type="button" class="button logout">Logout</button>
         </div>
     </div>
 </div>
