--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <title>Send Message</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">-->
+    <link rel="shortcut icon" type="image/x-icon" href="/public/favicon.ico">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
