refactored to a new server setup

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,6 @@
     <%- include('./partials/masthead'); %>
 </header>
 <section>
-    <p>Error Page</p>
+    <p>Landing Page</p>
 </section>
 <%- include('./partials/footer'); %>
