--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,21 @@
     <%- include('./partials/masthead'); %>
 </header>
 <section>
-    <p>Landing Page</p>
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+            <div class="cell large-12">
+                <h1>Landing Page</h1>
+            </div>
+            <div class="cell large-12">
+                <a class="button" href="/login">Login</a>
+            </div>
+            <div class="cell large-12">
+                <div class="description">
+                    <p>Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. Lorem Ipsum's father was with Lee Harvey Oswald prior to Oswald's being, you know, shot.</p>
+                    <p>I think my strongest asset maybe by far is my temperament. I have a placeholding temperament. He’s not a word hero. He’s a word hero because he was captured. I like text that wasn’t captured. This placeholder text is gonna be HUGE. Lorem Ipsum best not make any more threats to your website. It will be met with fire and fury like the world has never seen.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <%- include('./partials/footer'); %>
