added third party authentication

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="top-bar-right">
-            <a href="/logout" class="button logout">Logout</a>
+            <a href="/lgo" class="button logout">Logout</a>
         </div>
     </div>
 </div>
