display a drop down if any users found, otherwise a textfield for recipient on send page

--- a/views/send.ejs
+++ b/views/send.ejs
@@ -10,10 +10,7 @@
                 <div class="gid-x grid-margin-x">
                     <div class="cell medium-6">
                         <label>Recipient
-                            <select name="recipient" id="recipient" required>
-                                <option value="">Select recipient</option>
-                                <%- data %>
-                            </select>
+                            <%- recipients %>
                         </label>
                     </div>
                     <div class="cell medium-6">
