fixed up message sending and receiving

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -16,6 +16,7 @@
             </ul>
         </div>
         <div class="top-bar-right">
+            <span><%- locals.user._json.email %></span>
             <a href="/lgo" class="button logout">Logout</a>
         </div>
     </div>
