--- a/views/send.ejs
+++ b/views/send.ejs
@@ -10,7 +10,7 @@
                 <div class="gid-x grid-margin-x">
                     <div class="cell medium-6">
                         <label>Recipient
-                            <%- recipients %>
+                            <%- locals.recipients %>
                         </label>
                     </div>
                     <div class="cell medium-6">
