removed trump ipsum from landing

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -13,8 +13,7 @@
             </div>
             <div class="cell large-12">
                 <div class="description">
-                    <p>Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. Lorem Ipsum's father was with Lee Harvey Oswald prior to Oswald's being, you know, shot.</p>
-                    <p>I think my strongest asset maybe by far is my temperament. I have a placeholding temperament. He’s not a word hero. He’s a word hero because he was captured. I like text that wasn’t captured. This placeholder text is gonna be HUGE. Lorem Ipsum best not make any more threats to your website. It will be met with fire and fury like the world has never seen.</p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In blandit odio id turpis gravida commodo. Aliquam sollicitudin lacus non elit cursus venenatis. Maecenas commodo est vel ligula porttitor bibendum. Nam eget arcu a risus ornare imperdiet imperdiet in purus. Aliquam eu gravida ipsum, eget finibus erat. Integer sed dolor dictum, accumsan ligula ac, hendrerit ipsum. Maecenas interdum ex magna, vel vulputate eros porta at. Nunc convallis dignissim justo, vel mattis metus. Integer sed feugiat orci. Morbi mollis libero sed mauris luctus luctus. Ut sollicitudin at lectus nec pharetra. Quisque euismod luctus ex id aliquet.</p>
                 </div>
             </div>
         </div>
